<resources>
    <string name="app_name">EduRP</string>
    <string name="tab_home">Dashboard</string>
    <string name="tab_wards">My Wards</string>
    <string name="tab_profile">My Profile</string>
    <string name="tab_options">Options</string>
    <string name="Submit">Submit</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="forgot_password_success">Forgot Password Sent</string>
    <string name="sign_in">Login</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="title_forgot_password">Forgot Password?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="change_password">Change Password</string>
    <string name="profile_name_logo">Name</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="we_just_need_your_registered_email_id_to_send_your_password_reset_instructions">We just need your registered Email id to send your password reset instructions.</string>
    <string name="a_temporary_password_has_been_sent_to_the">A temporary password has been sent to the email address you have
    provided. Please log in with the temporary password and change it to a  password of your choice as soon as possible.</string>
    <string name="back_to_login">Back to Login</string>
    <string name="msg_validate_username_1">Special Charactor not allowed</string>
    <string name="msg_validate_username_2">User name should not be null or empty</string>
    <string name="msg_validate_password_1">Special Charactor not allowed</string>
    <string name="msg_validate_password_2">Password should not be null or empty</string>
    <string name="msg_validate_password_3">Length of password should between 4 and 6</string>
    <string name="msg_validate_emai">Email is not correct</string>
    <string name="proceeding">Proceeding...</string>
    <string name="success">Successful Logged In</string>
    <string name="msg_error_model">No model instance registered with IModel</string>
    <string name="msg_validate_new_password">Confirm password should match with new password</string>
    <string name="msg_validate_new_password1">New password should not as same as old password</string>
    <string name="btn_submit">Submit</string>
    <string name="msg_error_model1">Testing message</string>
    <string name="setting">Setting</string>
    <string name="logout">Logout</string>
    <string name="share_this_app">Share this app</string>
    <string name="welcome_to">Welcome to</string>
    <string name="name">Name</string>
    <string name="user_name">User Name</string>
    <string name="location">Location</string>
    <string name="attendance">Attendance</string>
    <string name="homework">Homework</string>
    <string name="diary">Diary</string>
    <string name="message">Message</string>
    <string name="events">Events</string>
    <string name="gallery">Gallery</string>
    <string name="feedback">Feedback</string>
    <string name="fee">Fee</string>
    <string name="msg_invalide_credential">Invalid Credential</string>
    <string name="msg_network_prob">Something went wrong with server. Please try again later.</string>
    <string name="please_wait">Please wait...</string>
    <string name="msg_session_exp">Session Expired</string>
    <string name="msg_unauthorized">Unauthorized Credential</string>
    <string name="msg_class">Class</string>
    <string name="msg_class_teacher">Class Teacher</string>
    <string name="msg_class_teacher_phone">Class Teacher Phone</string>
    <string name="download_offline_content">Download offline content</string>
    <string name="download_only_when_wifi_connected">Download only when wifi connected</string>
    <string name="msg_logout">Successfully Logout</string>
    <string name="course">Course</string>
    <string name="term">Term</string>
    <string name="msg_subject">Subject</string>
    <string name="msg_absent">Absent</string>
    <string name="msg_total">Total</string>
    <string name="value">value</string>
    <string name="tab_attendance">Attendance</string>
    <string name="total_score">Total Score</string>
    <string name="achievement_index">Index</string>
    <string name="download">Download Result</string>
    <string name="grade">Grade</string>
    <string name="result">Result</string>
    <string name="tab_result">Results</string>
    <string name="tab_fee">Fee</string>
    <string name="msg_rp">Rp</string>
    <string name="due_date">Due Date : </string>
    <string name="msg_view_details">View Details</string>
    <string name="msg_pay_now">Pay Now</string>
    <string name="part_payment">Part Payment</string>
    <string name="download_receipt">Download Receipt</string>
    <string name="tab_time_table">Time Table</string>
    <string name="tab_noticeboard">Noticeboard</string>
    <string name="tab_news">News</string>
    <string name="like">Like</string>
    <string name="comment">Comment</string>
    <string name="type_comment">Type Comment</string>
    <string name="send">Send</string>
    <string name="title_news_details">News Details</string>
    <string name="unlike">Unlike</string>
    <string name="msg_success_msg_post">"Successfully Post Comment"</string>
    <string name="msg_validate_comment">Comment can not be empty</string>
    <string name="tab_events">Events</string>
    <string name="upcoming">Upcoming</string>
    <string name="past">Past</string>
    <string name="attending">Attending</string>
    <string name="not_going">Not Going</string>
    <string name="subject_semester">Semester</string>
    <string name="Credits">Credits</string>
    <string name="Major">Major</string>
    <string name="index">Index</string>
    <string name="thank_you">Thank you!</string>
    <string name="select_lang">Select Language</string>
    <string name="english">English</string>
    <string name="bahasa">Bahasa</string>
    <string name="loading_language">Loading...</string>
    <string name="date">Date</string>
    <string name="msg_view">View</string>
    <string name="delete">Delete</string>
    <string name="View">View</string>
    <string name="subject">Subject</string>
    <string name="no_internet">No Internet</string>
    <string name="msg_exit">Do you want to exit from application?</string>
    <string name="title_payslip">Payslips</string>
    <string name="percentage">Percentage</string>
    <string name="title_tax">Tax</string>
    <string name="tax_report">Tax Report</string>
    <string name="computation_report">Computation Report</string>
    <string name="financial_year">Financial Year</string>
    <string name="results">Results</string>
    <string name="view">View</string>
    <string name="db_updated">Database Updated</string>
    <string name="faculty">Faculty</string>
    <string name="msg_select_lang">Please Select Language</string>
    <string name="msg_downloading_file">Downloading file. Please wait...</string>
    <string name="assign_by">Assign by</string>
    <string name="accept">Accept</string>
    <string name="exit">Exit</string>
    <string name="no">No</string>
    <string name="ok">Ok</string>

    <string-array name="array_language">
        <!--<item>@string/select_lang</item>-->
        <item>@string/english</item>
        <item>@string/bahasa</item>
    </string-array>
</resources>
