<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:orientation="vertical">

    <include
        layout="@layout/inc_inner_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></include>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/comm_padding">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="@dimen/comm_padding">

            <com.stpl.edurp.utils.FontTextView
                android:id="@+id/textview1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="18dp"
                android:gravity="center_horizontal"
                android:text="@string/thank_you"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorWhite" />

            <com.stpl.edurp.utils.FontTextView
                android:id="@+id/textview2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="25dp"
                android:gravity="center_horizontal"
                android:text="@string/a_temporary_password_has_been_sent_to_the"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textColor="@color/colorWhite" />


            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/edittext_password"
                android:layout_marginTop="40dp"
                android:alpha="1.0"
                android:background="@color/colorWhite"
                android:text="@string/back_to_login"
                android:textAllCaps="false"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Button"
                android:textColor="@color/colorGreen" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>