<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGrayTransparent"
    android:orientation="vertical">

    <include
        android:id="@+id/inc_main_holder"
        layout="@layout/inc_main_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></include>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerview_results_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/lin_holder"
        android:layout_below="@+id/inc_main_holder"></android.support.v7.widget.RecyclerView>

    <LinearLayout
        android:id="@+id/lin_holder"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_results_download"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="4dp"
            android:background="@drawable/filled_rect"
            android:text="@string/download"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:visibility="visible" />

        <Button
            android:visibility="gone"
            android:id="@+id/btn_results_delete"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="4dp"
            android:background="@drawable/filled_rect"
            android:text="@string/delete"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorWhite"
            android:textStyle="bold" />


        <Button
            android:visibility="gone"
            android:id="@+id/btn_results_view"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="4dp"
            android:background="@drawable/filled_rect_green"
            android:text="@string/View"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorWhite"
            android:textStyle="bold" />

    </LinearLayout>
</RelativeLayout>