<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="0.1dp"
    app:cardMaxElevation="1dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:id="@+id/lin_attendance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:baselineAligned="false"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="10dp"
        android:weightSum="1">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.30"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textview_attendance_row_subject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/msg_subject"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/colorTextHint"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/textview_attendance_row_subject_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="0%"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorLightRed"
                android:textStyle="normal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.34"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textview_attendance_row_total"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/msg_total"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/colorTextHint"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/textview_attendance_row_total_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="0 days"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/black"
                android:textStyle="normal" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.29"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textview_attendance_row_absent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/msg_absent"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/colorTextHint"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/textview_attendance_row_absent_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="0 days"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorSkyBlue"
                android:textStyle="normal" />
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>
