<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:orientation="vertical"
    android:padding="@dimen/comm_padding">

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/textview_forgot_password"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageview_logo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="0dp"
                android:src="@drawable/logo" />

            <include
                android:id="@+id/rel_radio_btn"
                layout="@layout/inc_language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageview_logo"
                android:layout_marginTop="40dp"
                android:gravity="center_horizontal">


            </include>


            <android.support.design.widget.TextInputEditText
                android:id="@+id/edittext_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/rel_radio_btn"
                android:layout_marginTop="30dp"
                android:alpha="0.8"
                android:drawableLeft="@drawable/login_user"
                android:drawablePadding="15dp"
                android:hint="@string/username"
                android:maxLines="1"
                android:paddingBottom="20dp"
                android:paddingEnd="20dp"
                android:paddingRight="20dp"
                android:paddingTop="20dp"
                android:singleLine="true"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Menu"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:theme="@style/Theme.App.Base"
                android:visibility="visible" />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edittext_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/edittext_email"
                android:layout_marginTop="8dp"
                android:alpha="0.8"
                android:drawableLeft="@drawable/login_pass"
                android:drawablePadding="17dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingBottom="20dp"
                android:paddingEnd="20dp"
                android:paddingRight="20dp"
                android:paddingTop="20dp"
                android:singleLine="true"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Menu"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:theme="@style/Theme.App.Base"
                android:visibility="visible" />


            <Button
                android:textColor="@color/colorBlue"
                android:id="@+id/btnSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edittext_password"
                android:layout_marginTop="30dp"
                android:background="@drawable/button_curve_border"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Button" />
        </RelativeLayout>
    </ScrollView>


    <TextView
        android:id="@+id/textview_forgot_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom|fill_horizontal"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:text="@string/title_forgot_password"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Button"
        android:textColor="@color/colorWhite" />
</RelativeLayout>
